--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-header></app-header>
+<app-protection-modal></app-protection-modal>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
